<resources>
    <string name="app_name">Popular Movies</string>

    <!-- Detail Activity-->
    <string name="detail_title_label">Title:</string>
    <string name="detail_original_title_label">Original title:</string>
    <string name="detail_release_date_label">Release date:</string>
    <string name="detail_vote_label">Vote average:</string>
    <string name="detail_plot_label">Plot synopsis:</string>
    <string name="trailers_label">Trailers:</string>
    <string name="reviews_label">Reviews:</string>

    <!-- Content descriptions-->
    <string name="movie_poster_content_description">Movie poster</string>

    <!-- Error messages-->
    <string name="detail_error_message">Movie data not available</string>
    <string name="error_message">Data not available. Check your Internet connection.</string>

    <!--Spinner options data-->
    <string-array name="spinner_data">
        <item>Order by popularity</item>
        <item>Order by rating</item>
        <item>Show my collection</item>
    </string-array>

    <string name="actionbar_spinner">Spinner to order movies</string>

    <!--Used in menu to refresh data-->
    <string name="action_refresh">Refresh</string>


    <!--Button to make movies (un)favourite-->
    <string name="new_favourite">NEW FAVOURITE?</string>
    <string name="my_favourite">MY FAVOURITE MOVIE</string>
</resources>
